# Monster8

./: .gitignore  BUILD.md  CHANGES.md  CMakeLists.txt  COMPLETION_REPORT.md  DEPENDENCIES.md  DOCS_INDEX.md  LICENSE  Makefile  Monster8 Editor.code-workspace  Monster8Editor  QUICKSTART.md  README.md  README_FR.md  START_HERE.md  SUMMARY.md  Settings.cfg  WINDOWS_SETUP.md  app.rc  app.res  build.bat  build.sh  code.cpp  code.hpp  copy_deps.ps1  copy_resources.ps1  functions.cpp  functions.hpp  gtk.cpp  gtk.hpp  gtk_p1.cpp  gtk_p1.hpp  gtk_p2.cpp  gtk_p2.hpp  level_editor.cpp  level_editor.hpp  main.cpp  textview.css
.zencoder/rules/: repo.md
Emulator/: .gitignore  BUILD.md  BUILD_CMAKE.md  CHANGELOG_CMAKE.md  CHANGES.md  CMakeLists.txt  M8.cpp  M8.hpp  MIGRATION_CMAKE.md  Makefile  Monster8  Monster8.code-workspace  QUICK_START.md  README_BUILD.md  README_BUILD.txt  build.bat  build.sh  main.cpp  resource.rc  sdl_config.h
Emulator/.zencoder/rules/: repo.md
Emulator/cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
Games/ASWAIW/: ASWAIW.asm8
Help/: ReadMeFrench.docx  TODO List.docx
Palette/: Monster8 Aseprite Palette.pal
lib/gdk-pixbuf-2.0/2.10.0/: loaders.cache
